--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
       A dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
     </p>
     <p>
-      CTO <a href="http://hydra.io/" title="Hydra.io">Hydra.io</a>.
-      Building image sharing and printing services at
-      <a href='http://about.magnoliabox.com/' title='Magnolia Box'>Magnolia Box</a>
+      Engineer at <a href="https://www.airbrake.io/" title="Airbrake.io">Airbrake</a> / <a href="http://www.rackspace.com/" title="Rackspace">Rackspace</a>.
     </p>
   </div>
   <ul class='links'>
