add instagram profile link

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <li>
       <a href='http://uk.linkedin.com/in/zefer' title='Linkedin'>Linkedin</a>
     </li>
+    <li>
+      <a href='http://instagram.com/zzefer' title='Instagram'>Instagram</a>
+    </li>
   </ul>
   <script type="text/javascript">
   var _gaq = _gaq || [];
