--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
   <h1>Joe Roberts</h1>
   <div class='intro'>
     <p>
-      A passionate full stack developer with an expert eye for emerging technologies and their strategic application to the real-world.
+      I'm a full stack developer at <a href="https://www.airbrake.io/" title="Airbrake.io">Airbrake</a> / <a href="http://www.rackspace.com/" title="Rackspace">Rackspace</a>.
     </p>
     <p>
-      Highly skilled in software development, infrastructure and robust development process.
+      I also enjoy racing sailing, mountain biking, music &amp; adventure.
     </p>
     <p>
-      A dedicated sailing dinghy and yacht racer, mountain biker and adventure-sports enthusiast.
-    </p>
-    <p>
-      Engineer at <a href="https://www.airbrake.io/" title="Airbrake.io">Airbrake</a> / <a href="http://www.rackspace.com/" title="Rackspace">Rackspace</a>.
     </p>
   </div>
   <ul class='links'>
