--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <h1>Joe Roberts</h1>
   <div class='intro'>
     <p>
-      I'm a full stack developer at <a href="http://www.rackspace.com/" title="Rackspace">Rackspace</a> working on the <a href="https://www.airbrake.io/" title="Airbrake.io">Airbrake Bug Tracker</a>.
+      Builds the <a href="https://airbrake.io/" title="Airbrake.io">Airbrake Bug Tracker</a>.
     </p>
     <p>
-      I also enjoy racing sailing, mountain biking, music &amp; adventure.
+      Enjoys racing sailing, mountain biking, music &amp; adventure.
     </p>
     <p>
     </p>
