--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content='index,follow' name='robots'>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
   <link href='z.css' rel='stylesheet'>
-  <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet'>
+  <link href='//fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet'>
   <link href='/favicon.png' rel='shortcut icon'>
 </head>
 <body>
