Stop using this old search term

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1>Joe Roberts</h1>
   <div class='intro'>
     <p>
-      Builds the <a href="https://airbrake.io/" title="Airbrake.io">Airbrake Bug Tracker</a>.
+      Builds <a href="https://airbrake.io/" title="Airbrake.io">Airbrake</a>.
     </p>
     <p>
       Enjoys racing sailing, mountain biking, music &amp; adventure.
